# BookWise2

./: .dockerignore  .env.example  .gitignore  DOCKER.md  README.md  curated_books.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_prompt_metadata.py  0003_generation_idempotency.py  0004_generation_leases.py  0005_generation_observability.py  0006_youtube_videos.py  0007_explore_links.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  books.py  external_sections.py  generation.py  search.py  surprise.py
backend/app/clients/: openlibrary_client.py  youtube_client.py
backend/app/models/: __init__.py  book.py  explore_link.py  generation.py  youtube_video.py
backend/app/prompts/: critique.txt  key_ideas.txt  summary.txt
backend/app/providers/: __init__.py  anthropic_provider.py  base_provider.py  fake_provider.py  openai_provider.py
backend/app/repositories/: book_repo.py  explore_links_repo.py  generation_repo.py  youtube_repo.py
backend/app/schemas/: books.py  external_sections.py  generations.py
backend/app/services/: author_books_service.py  book_service.py  explore_links_service.py  generation_service.py  prompt_store.py  search_service.py  youtube_service.py
backend/app/utils/: concurrency.py  db.py  (+3 more)
backend/tests/: test_book_service_description.py  test_config_secrets.py  test_fake_provider.py  test_generation_leasing.py  test_idempotency.py  test_prompt_store.py  test_provider_selection.py
(+52 files in other folders)
